--- a/pages/education.html
+++ b/pages/education.html
@@ -79,9 +79,9 @@
 						</span>
 					</div>
 					<div class="col-sm-4" id="educationphoto">
-						<div class="row">
+						<div class="row"><center>
 						<img src="../img/cmu-logo.png" id="cmu-logo">
-						<img src="../img/vit-logo.png" id="vit-logo"> 
+						<img src="../img/vit-logo.png" id="vit-logo"> </center>
 						</div>
 					</div>
 					<div class="col-sm-2"></div>
