--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 			
 			<div id="about2" class="row">
 				<div class="col-md" id="education" ><a href="pages/education.html" style="text-decoration:none;">
-					<div class="row" style="height:5%;"></div>
-					<div class="row"style="height:85%;">
-						<span  class="align-middle" id="leap">a <span style="background: linear-gradient(to right,#2BFF3B,#FFFF00);  -webkit-background-clip: text;  -webkit-text-fill-color: transparent;">HUGE</span> leap.</span><br>
+					<div class="row" style="height:10%;"></div>
+					<div class="row"style="height:80%;">
+						<span  class="align-middle" id="leap">a <span style="background: linear-gradient(to right,#2BFF3B,#FFFF00);  -webkit-background-clip: text;  -webkit-text-fill-color: transparent;">HUGE</span> leap.</span>
 						<span class="align-middle"><h3>Now supercharged with <br></h3>
 						<center><img id="cmu-edu" src="img/cmu.png"> </center>
 					</div>
