--- a/pages/skills.html
+++ b/pages/skills.html
@@ -98,7 +98,7 @@
 							<hr>
 							<div class="row">
 								<div id="certi"><ul>
-									<li>Usable Security <i>[January 2022] </i><a href="../img/pdf/GOLD.pdf"><b><i class="fa fa-link" aria-hidden="true"></i></b></a><br></li>
+									<li>Usable Security <i>[January 2022] </i><a href="https://coursera.org/verify/CB3T4F4TAKCU"><b><i class="fa fa-link" aria-hidden="true"></i></b></a><br></li>
 									<li>Gold Level Certified Security Analyst <i>[August 2021] </i><a href="../img/pdf/GOLD.pdf"><b><i class="fa fa-link" aria-hidden="true"></i></b></a><br></li>
 									<li>Software Security <i>[April 2021] </i><a href="https://www.coursera.org/account/accomplishments/certificate/J9JR694BZX5X"><b><i class="fa fa-link" aria-hidden="true"></i></b></a><br></li>
 									<li>Math – a – thon Grade-2 certification <i>[June 2020] </i><a href="../img/pdf/mathathon.pdf"><b><i class="fa fa-link" aria-hidden="true"></i></b></a><br></li>
