--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 				<div class="col-md" id="research" ><a href="pages/research.html" style="text-decoration:none;">
 					<div class="row" style="height:10%;"></div>
 					<div class="row" style="height:80%;">
-						<span id="reach" class="align-middle" >Research...<br> built in.</span>
-						<center><span class="material-symbols-outlined" style="color:black;padding:0;" id="circle">add_circle</span></center>
+						<span id="reach" class="align-middle" style="color:white;">Research...<br> built in.</span>
+						<center><span class="material-symbols-outlined" style="color:white;padding:0;" id="circle">add_circle</span></center>
 					</div>
 					<div class="row" style="height:10%;"></div>	</a>
 				</div>
