--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				<div class="col-md" id="experience" ><a href="pages/experience.html" style="text-decoration:none;">
 					<div class="row" style="height:10%;"></div>	
 					<div class="row" style="height:80%;" >
-					<span id="exp" class="align-middle">Experienced!<br>Don't start from scratch!</span>
+					<span id="exp" class="align-middle">Experienced!<br><span style="font-size:3vh;">Don't start from scratch!</span></span>
 					</div>
 					<div class="row" style="height:10%;"><center><span class="material-symbols-outlined" style="color:white;padding:0;" id="circle">
 						add_circle</span></center>
