--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="row" style="height:10%;"></div>
 					<div class="row"style="height:80%;">
 						<span  class="align-middle" id="leap">a <span style="background: linear-gradient(to right,#2BFF3B,#FFFF00);  -webkit-background-clip: text;  -webkit-text-fill-color: transparent;">HUGE</span> leap.</span>
-						<span class="align-middle"><span id="now">Now supercharged with <br></span>
+						<span class="align-middle"><span id="now" class="align-middle">Now supercharged with <br></span>
 						<center><img id="cmu-edu" src="img/cmu.png"> </center></span>
 					</div>
 					<div class="row"style="height:10%;">
