--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@
 				<div class="col-md" id="different">
 					<a href="pages/about.html" style="text-decoration:none;">
 						<div class="row" style="height:10%;"></div>
-						<div class="row" style="height:80%;"><span class="align-middle" id="oh">Oh. So. Unique.</span><br><br><br><br></div>
-						<div class="row" style="height:10%;">
-							<span class="material-symbols-outlined" style="color:black;" id="circle">
+						<div class="row" style="height:80%;"><span class="align-middle" id="oh">Oh. So. Unique.</span><br><br><br><br><span class="material-symbols-outlined" style="color:black;" id="circle">
 							add_circle
-							</span>
+							</span><br></div>
+						<div class="row" style="height:10%;">
 						</div>
 					</a>
 				</div>
