--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 			<div id="explore" class="row">
-				<a href="#about2" style="text-decoration:none;">
+				<a href="pages/about.html" style="text-decoration:none;">
 				<div class="col">
 					<div class="row" style="height:25%;"></div>
 					<div class="row" style="height:50%;">
