--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 				</div>
 			</div>
 			<div id="explore" class="row">
-				<a href="pages/about.html" style="text-decoration:none;">
 				<div class="col">
 					<div class="row" style="height:25%;"></div>
+					<a href="pages/about.html" style="text-decoration:none;" class="align-middle">
 					<div class="row" style="height:50%;">
 					<span class="align-middle">
 						<h2>Hiiiiiiiii There!</h2>
 						<h3>Ready to explore?</h3>
 					</span>
 					</div>
-					<div class="row" style="height:25%;"></div>
-				</div>
 					</a>
+					<div class="row" style="height:25%;"></div>
+				</div>	
 			</div>
 			<!--
 			<div id="main-header" class="row" >
