--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 			<div id="explore" class="row">
 				<div class="col">
-					<div class="row" style="height:25%;"></div>
+					<a href="pages/about.html" style="text-decoration:none;"><div class="row" style="height:25%;"></div></a>
 					<a href="pages/about.html" style="text-decoration:none;" class="align-middle">
 					<div class="row" style="height:50%;">
 					<span class="align-middle">
@@ -70,7 +70,7 @@
 					</span>
 					</div>
 					</a>
-					<div class="row" style="height:25%;"></div>
+					<a href="pages/about.html" style="text-decoration:none;"><div class="row" style="height:25%;"></div></a>
 				</div>	
 			</div>
 			<!--
