--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 					</span>
 					</div>
 					</a>
-					<a href="pages/about.html" style="text-decoration:none;"><div class="row" style="height:25%;"></div></a>
+					<a href="pages/about.html" style="text-decoration:none;"><div class="row" style="height:25%;">
+						<span class="material-symbols-outlined" style="color:white;" id="circle">
+							add_circle
+						</span></div></a>
 				</div>	
 			</div>
 			<!--
