--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</div>
 					</a>
 					<a href="pages/about.html" style="text-decoration:none;"><div class="row" style="height:25%;">
-						<span class="material-symbols-outlined" style="color:white;" id="circle">
+						<span class="material-symbols-outlined" style="color:white;position:relative;bottom:10%;" id="circle">
 							add_circle
 						</span></div></a>
 				</div>	
