--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 					</div>
 					</a>
 					<a href="pages/about.html" style="text-decoration:none;"><div class="row" style="height:25%;">
-						<span class="material-symbols-outlined" style="color:white;position:relative;bottom:10vw;" id="circle">
+						<center><span class="material-symbols-outlined" style="color:white;position:relative;" id="circle">
 							add_circle
-						</span></div></a>
+						</span></center></div></a>
 				</div>	
 			</div>
 			<!--
