--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						add_circle</span></center>
 					</div>	</a>
 				</div>
-				<div class="col-md" id="activities" ><a href="pages/activities.html" style="text-decoration:none;">
+				<div class="col-md" id="activities" ><a href="pages/hobby.html" style="text-decoration:none;">
 					<div class="row" style="height:8%;"></div>	
 					<div class="row" style="height:80%;" >
 					
