--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="https://kit.fontawesome.com/375c877957.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
 		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-		<title>Meet Aryan<title>
+		<title>Meet Aryan</title>
 		<link rel="icon" href="img/icon.png" type="image/png">
 	</head>
 	<body>
